@@ -1,3 +1,8 @@
+openoffice-base-devel - 3.1_dev300_m34-1
+- new snapshot
+- fixed mozilla plugin
+- fixed menu entries to be "devel" again
+
 openoffice-base-devel - 3.1_dev300_m33-2
 - rebuild for python 2.6
 
